# RayCaster

./: .gitignore  CMakeLists.txt  README.md
include/: Ray.hpp  RayCaster.hpp  Wall.hpp
src/: Ray.cpp  RayCaster.cpp  Wall.cpp  main.cpp
